<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Catroid: An on-device visual programming system for Android devices
  ~ Copyright (C) 2010-2022 The Catrobat Team
  ~ (<http://developer.catrobat.org/credits>)
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU Affero General Public License as
  ~ published by the Free Software Foundation, either version 3 of the
  ~ License, or (at your option) any later version.
  ~
  ~ An additional term exception under section 7 of the GNU Affero
  ~ General Public License, version 3, is available at
  ~ http://developer.catrobat.org/license_additional_term
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~ GNU Affero General Public License for more details.
  ~
  ~ You should have received a copy of the GNU Affero General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/stage_layout_relative"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="bottom|center"
    android:orientation="horizontal" >

    <ImageView
         android:id="@+id/stage_dialog_menu"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:scaleType="fitXY"
         android:src="@drawable/stage_dialog_background_middle" />

    <TextView
        android:id="@+id/stage_dialog_download_language_model"
        android:layout_width="278dp"
        android:layout_height="472dp"
        android:layout_centerInParent="true"
        android:lines="20"
        android:textSize="25sp" />

    <LinearLayout
        android:id="@+id/stage_layout_linear"
        android:layout_width="389dp"
        android:layout_height="93dp"
        android:layout_alignEnd="@+id/stage_dialog_menu"
        android:layout_alignStart="@+id/stage_dialog_menu"
        android:layout_alignTop="@+id/stage_dialog_menu"
        android:layout_marginEnd="-16dp"
        android:layout_marginStart="-13dp"
        android:layout_marginTop="12dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/stage_dialog_download_language_model_button_maybe_later"
            style="@style/StageButton"
            android:drawableTint="@drawable/stage_dialog_color_selector"
            android:drawableTop="@drawable/ic_baseline_cancel_24"
            android:text="@string/download_language_model_maybe_later"
            android:textColor="@color/accent" />

         <Button
             android:id="@+id/stage_dialog_download_language_model_button_download_now"
             style="@style/StageButton"
             android:drawableTint="@drawable/stage_dialog_color_selector"
             android:drawableTop="@drawable/ic_baseline_file_download_24"
             android:text="@string/download_language_model_now"
             android:textColor="@color/accent" />
    </LinearLayout>

     <ImageView
         android:id="@+id/stage_dialog_menu_side_left"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignTop="@+id/stage_dialog_menu"
         android:layout_toStartOf="@+id/stage_dialog_menu"
         android:background="@drawable/stage_dialog_background_side" />

    <ImageView
        android:id="@+id/stage_dialog_menu_side_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/stage_dialog_menu"
        android:layout_toEndOf="@+id/stage_dialog_menu"
        android:background="@drawable/stage_dialog_background_side" />

</RelativeLayout>


